--- a/src/assets/styles/EditOptions.css
+++ b/src/assets/styles/EditOptions.css
@@ -1,7 +1,8 @@
 .edit-options {
-  grid-column: 6 / 8;
+  grid-column: 6 / 9;
   grid-row: 1 / 8;
   border-left: 1px solid #33333333;
+  position: relative;
 }
 
 .option-panel {
@@ -23,4 +24,18 @@
   font-size: 0.6rem;
   font-weight: 500;
   text-align: left;
+}
+
+.histogram-viewer{
+  width: 100%;
+  height: 180px;
+  position: absolute;
+  bottom: 10px;
+  left: 0;
+}
+
+.histogram-viewer img{
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
